--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -7,3 +7,6 @@ sql:
       go:
         emit_json_tags: true
         out: "internal/database"
+        overrides:
+          - go_struct_tag: `json:"hashed_password,omitempty"`
+            column: users.hashed_password
