--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DB_CONNECTION_STRING="postgres://postgres:@localhost:5432/unsubtle?sslmode=disable"
+JWT_SECRET="de11570b-a977-47b8-b48d-6fb44d3da1ea"
